07_TAD_opaco/TAD_opac_07/Resultados/Rafael/data/result_compilation.txt
data.c:121:2: error: #endif without #if
  121 | #endif
      |  ^~~~~
data.c: In function ‘CriaData’:
data.c:32:1: warning: control reaches end of non-void function [-Wreturn-type]
   32 | }
      | ^
